# TideScript

./: .gitignore  LICENSE  README.md  TideScript.opam  compile.sh  dune-project  shell.nix  simple_test.tide  test_minimal.tide
data/: hardware_graph.dot  solvents.csv
examples/: test1.tide  test2.tide  test3.tide  thiol-maleimide.tide  uniprot_aavee_peptide.tide  uniprot_getdata.tide
lib/: #functions.ml#  aminoacids.ml  dune  functions.ml  hardwaregraph.ml  ir.ml  lexer.mll  parser.mly  periodictable.ml  syntax.ml  types.ml  uniprot.ml  uniprot.mli
scripts/: conjugation.nick  example.nick  script.nick  test1.nick  test3.tide
test/: dune  test_uniprot.ml
